<resources>
    <string name="app_name" translatable="false">VoiceTea</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="about_us_description">VoiceTea is a Truebeans\' project ideated, designed and programmed by Bernardo Manfriani and Pietro Fanti.</string>
    <string name="no_profit_project">The project is "no-profit". When we have managed to cover production costs, we will remove advertisements for all users.
        Below you can see how much we miss to reach this goal and help us with a small donation.\nThe bar may take some time to update.</string>
    <string name="_0">$0</string>
    <string name="_30">$30</string>
    <string name="contact_us">Contact us:</string>
    <string name="pietro_email" translatable="false">pietro.fanti@truebeans.it</string>
    <string name="pietro" translatable="false">Pietro Fanti:</string>
    <string name="bernardo" translatable="false">Bernardo Manfriani:</string>
    <string name="bernardo_email" translatable="false">bernardo.manfriani@truebeans.it</string>
    <string name="truebeans" translatable="false">Truebeans:</string>
    <string name="truebeans_website" translatable="false">www.truebeans.it</string>
    <string name="help">Help</string>
    <string name="about_us">About us</string>
    <string name="settings">Settings</string>
    <string name="info">VoiceTea is an application designed for theater students and, in general, for anyone who needs to understand how to modulate his own voice. Once started, the application will notify you when your voice has peaks of pitch that you should avoid, to help you understand how to modulate your pitch.</string>
    <string name="precision">Precision:</string>
    <string name="samplerate" translatable="false">Samplerate:</string>
    <string name="hz" translatable="false">Hz</string>
    <string-array name="samplerate_entries">
        <item>4096</item>
        <item>5512</item>
        <item>11025</item>
        <item>22050</item>
        <item>44100 (Recommended)</item>
    </string-array>
    <string-array name="precision_entries">
        <item>Low (Don\'t use with sample rate 44100)</item>
        <item>High (Could have some delay)</item>
    </string-array>
    <string name="donate_1_99">Donate $1.99</string>
    <string name="application_logo">application logo</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="premium_list">\u2022 No ads \n\u2022 Advanced settings \n\u2022 You will also contribute to the development of the app</string>
    <string name="premium" translatable="false">Premium</string>
    <string name="coffe">+ a coffee for developers</string>
    <string name="_1_99">1.99$</string>
    <string name="_2_99">2.99$</string>
    <string name="title_activity_donate">Buy Premium</string>
    <string name="title_activity_open_source">Open source libriaries</string>
    <string name="na_alpha">Not available in alpha version</string>
    <string name="privacy_policy">Privacy policy:</string>
    <string name="privacy_policy_link" translatable="false">www.truebeans.it/voicetea/privacy_policy</string>
    <string name="libraries_header" translatable="false">The following sets forth attribution notices for third party software that may be contained in portions of the VoiceTea product. we thank the open source community for all of thier contributions.</string>
    <string name="graphview" translatable="false">GraphView</string>
    <string name="jtransforms" translatable="false">JTransforms</string>
    <string name="gplay_iap_samples" translatable="false">Google Play In-app Billing Samples</string>
    <string name="license" translatable="false">license</string>
    <string name="license_header1" translatable="false">The following software may be included in this product: </string>
    <string name="license_header2" translatable="false">. This software contains the following license and notice below:\n\n</string>
    <string name="graphView_license" translatable="false">Copyright 2016 Jonas Gehring\n\n
        Licensed under the Apache License, Version 2.0 (the \"License\");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n

            \thttp://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="jTranforms_license" translatable="false">
        JTransforms\n
        Copyright (c) 2007 onward, Piotr Wendykier\n
        All rights reserved.\n

        Redistribution and use in source and binary forms, with or without
        modification, are permitted provided that the following conditions are met:\n\n

        1.\tRedistributions of source code must retain the above copyright notice, this
           list of conditions and the following disclaimer.\n
        2.\tRedistributions in binary form must reproduce the above copyright notice,
           this list of conditions and the following disclaimer in the documentation
           and/or other materials provided with the distribution.\n\n

        THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS \"AS IS\" AND
        ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
        WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
        DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
        ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
        (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
        LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
        ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
        (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
        SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
    </string>
    <string name="iap_license" translatable="false">
        Copyright (c) 2012 Google Inc.\n\n
        Licensed under the Apache License, Version 2.0 (the \"License\");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n

            \thttp://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
     </string>
    <string name="signalmode">Peaks Alert:</string>
    <string name="speechmode">Speech Focus:</string>


</resources>
