<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_about"
        android:title="@string/about_us" />
    <item
        android:id="@+id/navigation_help"
        android:title="@string/help"
        android:icon="@drawable/ic_help_outline_grey_24dp"/>
    <item
        android:id="@+id/navigation_settings"
        android:title="@string/settings"/>
    <!--TODO: implementare quando avremo l'account venditore
    <item
        android:id="@+id/navigation_donate"
        android:icon="@drawable/ic_shop_white_24dp"
        android:title="@string/title_activity_donate"/>
    -->
    <item
        android:id="@+id/navigation_open_source_libraries"
        android:title="@string/title_activity_open_source"/>
</menu>